Fix Looking at EuroMillions? on phone, lets start by using the width we have to avoid the balls wrapping onto 2 lines. The divider lines can come out to the margins (to the left edge of game name and to right edge of the checkboxes below). This way the X and Maximillions checkbox will be inline with the rest of the checkboxes and the balls can start further left. Without reducing the text size for the numbers, lets try reducing the diameter of the circles so that, for games like EuroMillions?, 7 balls fit on a line without wrapping when viewed on iPhone 6/7 and iPhone 6/7 Plus. Let's not make them smaller than they need to be to accomplish this. We'll likely end up applying this to all lotteries even if they have <7 balls. It's only for the display numbers, not the number pads where players pick numbers. If we like it we'll likely apply the same size to the line of numbers at the top of the pick page.

--- a/lot-ticket/app/css/app.css
+++ b/lot-ticket/app/css/app.css
@@ -132,24 +132,34 @@ html, body, h1, h2, h3, h4 {
 }
 
 .ball {
-    border: 2px solid #e37f91;
-    min-width: 20px;
-    min-height: 20px;
-    max-width: 20px;
-    max-height: 20px;
-    width: 20px;
-    height: 20px;
-    border-radius: 100px;
-    text-align: center;
-    padding: 4px;
-    font-size: 18px;
-    margin-right: 5px;
-    float: left;
-    box-sizing: content-box !important;
-    line-height: 22px;
-    vertical-align: top;
-    margin-bottom: 4px;
-    outline: 0px solid transparent;
+	border: 2px solid #e37f91;
+	min-width: 25px;
+	min-height: 25px;
+	max-width: 25px;
+	max-height: 25px;
+	width: 27px;
+	height: 25px;
+	border-radius: 100px;
+	text-align: center;
+	padding: 4px;
+	font-size: 18px;
+	margin-right: 5px;
+	float: left;
+	box-sizing: content-box !important;
+	line-height: 26px;
+	vertical-align: top;
+	margin-bottom: 4px;
+	outline: 0px solid transparent;
+}
+
+.display-numbers .ball {
+    min-width: 22px;
+    min-height: 22px;
+    max-width: 22px;
+    max-height: 22px;
+    width: 22px;
+    height: 22px;
+    line-height: 24px;
 }
 
 .ball.powerballs {
